src/objects/Subscription_Temp_Stop__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Temp_Stop_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Temp Stop Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Subscription Temp Stops</relationshipLabel>
        <relationshipName>Subscription_Temp_Stops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Temp_Stop__c</fullName>
        <label>Temp Stop</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Temp_Stop__c</referenceTo>
        <relationshipLabel>Subscription Temp Stops</relationshipLabel>
        <relationshipName>Subscription_Temp_Stops</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Subscription Temp Stop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STS-{0000000000}</displayFormat>
        <label>Subscription Temp Stop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Temp Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restart_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Temp_Stop__r.Restart_Date__c &gt;= Subscription__r.Effective_End_Date__c</errorConditionFormula>
        <errorMessage>Restart Date must not be greater than or equal to Subscription End Date</errorMessage>
    </validationRules>
</CustomObject>